# cookiecutters_cpp_test1

./: README.md  doxyfile  meson.build  pyproject.toml  source_checker.py  source_doxygen_runner.py
.github/workflows/: build-cli.yml  build-wheels.yml  run-tests.yml
cookiecutters_cpp_test/: __init__.py
cookiecutters_cpp_test/cli/: cli.cpp  cli.h
cookiecutters_cpp_test/math/: helpers.h  helpers.py  helpers_python_extension.cpp  helpers_python_extension.h  helpers_python_extension.pyi  helpers_test.cpp
subprojects/googletest-1.17.0/: .gitignore
subprojects/pybind11-3.0.0/: .gitignore
