[project]
name = "cookiecutters_cpp_test"
version = "0.0.1"
description = "cookiecutters_cpp_test"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"numpy (>=2.0.0,<3.0.0)",
]

[build-system]
requires = [
    "meson-python",
    "meson>=1.4",
"numpy (>=2.0.0,<3.0.0)",
]
build-backend = "mesonpy"
